Complete words about "scan" pics in p3.

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -3210,7 +3210,91 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
 использование $p_e$ предпочтительнее $p_c$,
 и лучшие результаты демонстрируют методы ``\ldots qeA''  и ``\ldots beA''.
 
-Сводные результаты среднеквадратичных ошибок идентификации, для методов ``Fq3r\ldots''
+Рассмотрим аналогичные зависимости для методов, агенты в которых
+используют для аппроксимации $p_e$ метод $p_{eql}$.
+Для этих методов, в отличие от рассмотренных выше,
+есть возможность корректного определения величин $S$ и $W$.
+Следовательно, нет необходимости убирать часть методов из числа рассматриваемых.
+
+Начнём анализ с группы методов ``ql3rlFvnAAF''~(рис.~\ref{atu:f:ql3rlFvnAAF_scan}), для упрощения сравнения
+с ранее описанными методами, для которых первым рассмотренным нормально работающим был ``Fq3rlFvnAAF''.
+единичный множитель в определении $f_e$ на примере группы методов ``Fq3rlovnAAW''.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.8\textwidth]{p/scan/qls-p_p_e_ql3rlFvnAAF_scan.png}
+  }
+  \caption{Зависимости $e(p_o)$ для методов ql3rlFvnAAF в квазистационарном случае}
+  \label{atu:f:ql3rlFvnAAF_scan}
+\end{figure}
+
+В представленных зависимостях, про сравнению с методами ``Fq3\ldots'', наблюдаются
+как общие характеристики, так и новые свойства. В первую очередь,
+использование метода координатора ``ge'' даёт худшие результаты,
+и наблюдается аналогичная форма зависимости.
+Совершенно аналогично, методы с использованием величин $p_e$ агентов
+дают лучшие оезультаты, чем методы,  использующие $p_c$.
+Также близок к аналогичному набор лучших метдов из группы:
+``ql3rlFvnleF'', ``ql3rlFvnqeF'' и ``ql3rlFvnbeF''.
+Значительным отличием является существенно меньший уровень ошибки
+идентификации для этих методов, при этом разница между
+``le'', ``qe'' и ``be'' пренебрежимо мала.
+
+
+Использование при этих же условиях на уровне координатора поиска
+величины $S$ (группа методов ``ql3rlFvnAAS'', рис.~\ref{atu:f:ql3rlFvnAAS_scan}) заметно
+изменяет картину только для ``глобальных'' методов,
+причём немного и в лучшую сторону.
+Из списка лучших выпал метод, использующий ``le'',
+для двух оставшихся изменение ошибки пренебрежительно мало.
+Из негативных явлений стоит отметить увеличение скачкообразных
+изменений ошибки для некоторых из методов.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.8\textwidth]{p/scan/qls-p_p_e_ql3rlFvnAAS_scan.png}
+  }
+  \caption{Зависимости $e(p_o)$ для методов ql3rlFvnAAS в квазистационарном случае}
+  \label{atu:f:ql3rlFvnAAS_scan}
+\end{figure}
+
+При использовании для той же цели величины $W$
+(группа методов ``ql3rlFvnAAW'', рис.~\ref{atu:f:ql3rlFvnAAW_scan}),
+позволяет достичь лучших результатов для ``глобальных методов'',
+сохраняя высокую точность для той же тройки лучших.
+
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.8\textwidth]{p/scan/qls-p_p_e_ql3rlFvnAAW_scan.png}
+  }
+  \caption{Зависимости $e(p_o)$ для методов ql3rlFvnAAW в квазистационарном случае}
+  \label{atu:f:ql3rlFvnAAW_scan}
+\end{figure}
+
+При прочих равных замена величины $F$ как множителя в определении $f_e$
+на единицу, $S$, или же $W$
+(например, группа методов ``ql3rlWvnAAW'', рис.~\ref{atu:f:ql3rlWvnAAW_scan}),
+для квизистационарной задачи приводит к пренебрежимо малым отличиям,
+поэтому на данном этапе достаточно было рассмотреть 4 группы по 8 методов.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.8\textwidth]{p/scan/qls-p_p_e_ql3rlWvnAAW_scan.png}
+  }
+  \caption{Зависимости $e(p_o)$ для методов ql3rlWvnAAW в квазистационарном случае}
+  \label{atu:f:ql3rlWvnAAW_scan}
+\end{figure}
+
+Ещё одним существенным отличием методов ``ql3r\ldots'',
+помимо меньшего общего уровня ошибок,
+является отсутствие наклонного учаска зависимости $e(p_o)$
+при $p_o \approx 40$. В окрестности этой точки производная
+принимает близкое к нулю значение, и методы ``Fq3r\ldots''
+не обеспечивают должной чувствительности в этой области,
+что приводит к росту ошибки идентификации.
+
+Сводные результаты среднеквадратичных ошибок идентификации, для методов ``ql3r\ldots''
 приведены в таблице~\ref{atu:t:err_test_id_ql}.
 
 \begin{table}[htb!]
@@ -3236,7 +3320,25 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
   \end{center}
 \end{table}
 
+Анализ значений в этой таблице позволяет сделать следующие выводы.
+Часть выводов, например, о предпочтительности $p_e$,
+худших результатах для ``gc'' и ``ge'' полностью аналогичны
+предыдущему случаю. Отличием является отсутствие групп
+методов, десонстрирующих недостаточно адекватные результаты.
 
+Также важным отличием является практическое совпадение
+результатов, представленных в столбцах ``qe'' и ``be'',
+а при исключении методов, названия которых заканчиваются на ``AAS'',
+и столбцов ``le''. В этих столбцах предсталены локальные оценки $p_\mathrm{id}$
+на основании величин $p_e$ агентов. При этом,
+для определения величин в столбце ``be'' требуются минимальные вычислительные
+затраты --- достаточно определить лучшего агента и взять его значение~$p_e$.
+
+Таким образом, в квазистационарном случае существует достаточный набор работоспособных методов.
+При наличии возможности, следует использовать методы,
+использующие величину критерия, на уровне координатора --- $p_e$, и например, $W$.
+Выбор остальных элементов классификации должен производится исходя из
+других условий, например, требований к динамическим характеристикам системы идентификации.
 
 
 % }}}2
