Add sign pictures for p3.

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -1298,10 +1298,10 @@ $q(p)$ максимально приближается к $q_o$. Это впол
 \end{figure}
 
 Неопределённость условия не позволяет выбрать какое-либо определённое и
-наилучшее в любом случае поведение. В данном конкрентом случае
+наилучшее в любом случае поведение. В данном конкретном случае
 был выбран вариант, уводящий от исходного $p_o$.
 Более того, в отличие от метода $p_{eql}$,
-алгоритмически данный случай выделить невозможно, оприраясь только на значения
+алгоритмически данный случай выделить невозможно, опираясь только на значения
 функции качества. Как результат --- нет возможности отметить этот случай снижением
 величины $S$.
 
@@ -3344,6 +3344,175 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
 % }}}2
 
 \subsection{Динамика агентов и поисковых координаторов на тестовой задаче}  % {{{2
+
+Рассмотренные тестовые задачи в квазистационарной постановке позволяют оценить
+точность методов в установившемся режиме. Однако, в таких условиях
+всю систему идентификации можно было бы заменить одной моделью,
+параметр которой медленно смещается в пределах рабочей области.
+Одной из основных задач, поставленных в процессе создания мультиагентных методов идентификации,
+было увеличение скорости определения параметра без ущерба для точности.
+При этом следует учесть, что максимальная достижимая скорость идентификации
+определяется временными характеристиками интегрального критерия,
+которые, в свою очередь, ограничиваются свойствами самого объекта.
+
+Для исследования динамических свойств рассматриваемых методов идентификации
+без привязки к конкретному объекту, будем считать,
+что для тестовой задачи характерное время стабилизации критерия
+значительно меньше характерных времён процессов поиска.
+Для реальных задач выполнение этого требования приведёт
+к значительному увеличению времени идентификации,
+но для тестовой задачи это приемлемое допущение.
+Таким образом, будем рассматривать тестовую задачу~(\ref{atu:eq:q_dem}),
+задан полный набор коэффициентов~(\ref{atu:eq:q_dem_all}),
+а динамика параметра описывается меандром~(\ref{atu:eq:po_t_sign}).
+При этом для анализа будет использоваться только
+один фронт~$p_o(t)$.
+
+Для анализа динамических свойств методов нет необходимости перебирать всё их множество.
+Как уже упоминалось, поисковый координатор в рассматриваемых методах
+не влияет на динамику моделей. Поэтому достаточно рассмотреть
+только одну группу методов работы координатора. Был выбрана группа ``\ldots{}AAW'',
+как показавшая стабильно хорошие результаты на предыдущих этапах.
+В таких условиях динамика агентов определяется в первую очередь
+методом аппроксимации $p_e$ и видом функции $f_e(p_c,p_e)$.
+Для подмножества рассматриваемых методов вид этой функции одинаков,
+но изменяется коэффициент в при её определении.
+Таким образом получаем 8 методов для агентов, 8 для координатора --- итого 64 случая.
+Как и при исследовании ошибки идентификации в квазистационарном режиме,
+на одном графике будем размещать результаты для восьми методов работы координатора.
+Для каждого случая также будет представлен график динамики агентов.
+
+Для оценки динамических свойств методов идентификации необходима
+естественная единица времени, определяемая самой системой идентификации,
+и не привязанная ни к объекту, ни к критерию.
+В качестве такой единицы предлагается использовать время,
+за которое агент пересекает всю свою рабочую полосу,
+при условии, что $f_e$ сохраняет максимальное возможное значение
+во время движения, другие силы пренебрежимо малы.
+Тогда это время определяется следующим образом:
+%
+\begin{equation}
+  t_{ua} = \frac{p_r - p_l}{ v_f k_e (p_r - p_l)} = \frac{1}{v_f k_e}.
+  \label{atu:eq:t_ua}
+\end{equation}
+%
+В рассматриваемых примерах $t_{ua} = 0.01$.
+
+Динамика агентов и значений идентифицируемых параметров для
+группы методов ``Fq3rlovnAAW''
+и вышеуказанных условиях
+приведена на рис.~\ref{atu:f:Fq3rlovnAAW_sign}.
+
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.48\textwidth]{p/sign/qls-p_t_pi_m_Fq3rlovnAAW_sign.png}
+    \hfill
+    \includegraphics[width=0.48\textwidth]{p/sign/qls-p_t_p_m_Fq3rlovnAAW_sign.png}
+  }
+  \caption{Динамика реакции агентов и $p_\mathrm{id}$ на скачок параметра для группы методов ``Fq3rlovnAAW''}
+  \label{atu:f:Fq3rlovnAAW_sign}
+\end{figure}
+
+Рассматриваемая группа методов характеризуется единичным множителем в определении $f_e$,
+что, с одной стороны, даёт возможность агентам смещаться с максимальной скоростью,
+с другой --- приводит к тому, что ``дальние'' агенты смещаются сильно, занимая место
+вблизи границы своей рабочей полосы. Как следствие --- после скачка параметра
+вблизи положения, соответствующего новому значению, нет достаточно близко
+расположенного агента, что увеличивает время реакции системы. Из первого графика на представленном рисунке
+видно, что агенты приняли новое положение за время порядка $t_{ua}$.
+В тоже время, динамика величин $p_\mathrm{id}$ для различных методов работы координаторов
+различается.
+
+приведена на рис.~\ref{atu:f:Fq3rlFvnAAW_sign}.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.48\textwidth]{p/sign/qls-p_t_pi_m_Fq3rlFvnAAW_sign.png}
+    \hfill
+    \includegraphics[width=0.48\textwidth]{p/sign/qls-p_t_p_m_Fq3rlFvnAAW_sign.png}
+  }
+  \caption{Динамика реакции агентов и $p_\mathrm{id}$ на скачок параметра для группы методов ``Fq3rlFvnAAW''}
+  \label{atu:f:Fq3rlFvnAAW_sign}
+\end{figure}
+
+приведена на рис.~\ref{atu:f:Fq3rlSvnAAW_sign}.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.48\textwidth]{p/sign/qls-p_t_pi_m_Fq3rlSvnAAW_sign.png}
+    \hfill
+    \includegraphics[width=0.48\textwidth]{p/sign/qls-p_t_p_m_Fq3rlSvnAAW_sign.png}
+  }
+  \caption{Динамика реакции агентов и $p_\mathrm{id}$ на скачок параметра для группы методов ``Fq3rlSvnAAW''}
+  \label{atu:f:Fq3rlSvnAAW_sign}
+\end{figure}
+
+приведена на рис.~\ref{atu:f:Fq3rlWvnAAW_sign}.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.48\textwidth]{p/sign/qls-p_t_pi_m_Fq3rlWvnAAW_sign.png}
+    \hfill
+    \includegraphics[width=0.48\textwidth]{p/sign/qls-p_t_p_m_Fq3rlWvnAAW_sign.png}
+  }
+  \caption{Динамика реакции агентов и $p_\mathrm{id}$ на скачок параметра для группы методов ``Fq3rlWvnAAW''}
+  \label{atu:f:Fq3rlWvnAAW_sign}
+\end{figure}
+
+% -----------------------------------------------------------------------------
+
+приведена на рис.~\ref{atu:f:ql3rlovnAAW_sign}.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.48\textwidth]{p/sign/qls-p_t_pi_m_ql3rlovnAAW_sign.png}
+    \hfill
+    \includegraphics[width=0.48\textwidth]{p/sign/qls-p_t_p_m_ql3rlovnAAW_sign.png}
+  }
+  \caption{Динамика реакции агентов и $p_\mathrm{id}$ на скачок параметра для группы методов ``ql3rlovnAAW''}
+  \label{atu:f:ql3rlovnAAW_sign}
+\end{figure}
+
+приведена на рис.~\ref{atu:f:ql3rlFvnAAW_sign}.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.48\textwidth]{p/sign/qls-p_t_pi_m_ql3rlFvnAAW_sign.png}
+    \hfill
+    \includegraphics[width=0.48\textwidth]{p/sign/qls-p_t_p_m_ql3rlFvnAAW_sign.png}
+  }
+  \caption{Динамика реакции агентов и $p_\mathrm{id}$ на скачок параметра для группы методов ``ql3rlFvnAAW''}
+  \label{atu:f:ql3rlFvnAAW_sign}
+\end{figure}
+
+приведена на рис.~\ref{atu:f:ql3rlSvnAAW_sign}.
+
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.48\textwidth]{p/sign/qls-p_t_pi_m_ql3rlSvnAAW_sign.png}
+    \hfill
+    \includegraphics[width=0.48\textwidth]{p/sign/qls-p_t_p_m_ql3rlSvnAAW_sign.png}
+  }
+  \caption{Динамика реакции агентов и $p_\mathrm{id}$ на скачок параметра для группы методов ``ql3rlSvnAAW''}
+  \label{atu:f:ql3rlSvnAAW_sign}
+\end{figure}
+
+приведена на рис.~\ref{atu:f:ql3rlWvnAAW_sign}.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.48\textwidth]{p/sign/qls-p_t_pi_m_ql3rlWvnAAW_sign.png}
+    \hfill
+    \includegraphics[width=0.48\textwidth]{p/sign/qls-p_t_p_m_ql3rlWvnAAW_sign.png}
+  }
+  \caption{Динамика реакции агентов и $p_\mathrm{id}$ на скачок параметра для группы методов ``ql3rlWvnAAW''}
+  \label{atu:f:ql3rlWvnAAW_sign}
+\end{figure}
+
+
+
 
 % }}}2
 
