More words about 'sign' tasks in p3/

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -3419,12 +3419,31 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
 с другой --- приводит к тому, что ``дальние'' агенты смещаются сильно, занимая место
 вблизи границы своей рабочей полосы. Как следствие --- после скачка параметра
 вблизи положения, соответствующего новому значению, нет достаточно близко
-расположенного агента, что увеличивает время реакции системы. Из первого графика на представленном рисунке
+расположенного агента, что увеличивает время реакции системы.
+Из первого графика на представленном рисунке
 видно, что агенты приняли новое положение за время порядка $t_{ua}$.
 В тоже время, динамика величин $p_\mathrm{id}$ для различных методов работы координаторов
-различается.
+различается. В первую очередь следует отметить, что применение любого из рассматриваемых
+методов работы координаторов приводит и тому, что величина $p_\mathrm{id}$
+смещается в область $p_o$ практически мгновенно. В реальных задачах --- за время стабилизации критерия.
+Динамика систем идентификации после этого быстрого смещения различная.
+Величины $p_{gc}$, $p_{lc}$, $p_{qc}$ плавно уменьшают ошибку за время
+перестройки агентов. Величина $p_{bc}$ ведёт себя аналогично, но ошибка
+идентификации остаётся достаточно большой. Методы, которые используют величины $p_e$
+агентов, проявляют несколько другую динамику. Начальное быстрое смещение
+приводит величину $p_\mathrm{id}$ в окрестность $p_o$ с ошибкой,
+характерной для установившегося режима. После этого за время порядка $t_{ua}$
+происходит отклонение от этого значения с последующим возвратом.
+Это связано с тем, что несмотря на исходное отсутствие агента в окрестности
+$p_o$, экстраполяционные возможности агентов для тестовой задачи
+дают неплохое приближение, однако, во время перестройки положения агентов
+точность аппроксимации падает.
 
-приведена на рис.~\ref{atu:f:Fq3rlFvnAAW_sign}.
+
+Если же в в определении $f_e$ при прочих равных (группа методов ``Fq3rlFvnAAW'')
+используется величина $F$,
+то наблюдается несколько иная динамика
+(рис.~\ref{atu:f:Fq3rlFvnAAW_sign}).
 
 \begin{figure}[htb!]
   \centerline{
@@ -3436,7 +3455,25 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
   \label{atu:f:Fq3rlFvnAAW_sign}
 \end{figure}
 
-приведена на рис.~\ref{atu:f:Fq3rlSvnAAW_sign}.
+Прежде всего, из-за эффективного уменьшения $f_e$
+время перестройки конфигурации агентов увеличивается в 1.5--2 раза.
+В принципе, для данной группы методов это можно скомпенсировать увеличением $k_e$
+без потери устойчивости.
+При этом, из-за меньшего исходного смещения ``дальних'' агентов
+после скачка параметра в окрестности $p_o$ оказывается один агент.
+Это приводит к тому, что для все методов из данной группы
+ошибка сразу после скачка невысока. Время стабилизации
+немного затягивается, метод $p_{bc}$ демонстрирует колебания
+при переключении между лучшими агентами, но в целом,
+динамические свойства данной группы методов лучше, чем предыдущей,
+при практически одинаковым уровнем ошибки после стабилизации.
+
+Применение в определении $f_e$ множителя $S$
+показало достаточно плохие результаты в квазистационарных
+условиях. Тем не менее, динамические свойства
+группы методов ``Fq3rlSvnAAW''
+(рис.~\ref{atu:f:Fq3rlSvnAAW_sign})
+представляют определённый интерес.
 
 \begin{figure}[htb!]
   \centerline{
@@ -3448,7 +3485,15 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
   \label{atu:f:Fq3rlSvnAAW_sign}
 \end{figure}
 
-приведена на рис.~\ref{atu:f:Fq3rlWvnAAW_sign}.
+Изначальное распределение агентов агентов в этом случае достаточно равномерное,
+и реакция на скачкообразное изменение параметра объекта
+происходит быстро. Однако, финальное расположение агентов
+не благоприятствует уменьшению ошибки идентификации.
+
+Аналогично квазистационарным условиям,
+использование величины $W$ (группа методов ``Fq3rlWvnAAW'')
+не приводит к заметному улучшению процесса идентификации
+(рис.~\ref{atu:f:Fq3rlWvnAAW_sign}).
 
 \begin{figure}[htb!]
   \centerline{
@@ -3460,9 +3505,24 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
   \label{atu:f:Fq3rlWvnAAW_sign}
 \end{figure}
 
+Точно так же как начальное, так и конечное распределение
+агентов на способствует снижению ошибки идентификации.
+При этом время реакции на скачок остаётся близки к минимально возможному.
+Из положительных изменений по сравнению с предыдущей группой методов
+можно отметить меньшее количество скачков при использовании $p_{bc}$,
+но сам по себе этот метод практического интереса не представляет.
+
+
 % -----------------------------------------------------------------------------
 
-приведена на рис.~\ref{atu:f:ql3rlovnAAW_sign}.
+Рассмотрим аналогичные зависимости для методов, агенты в которых
+для аппроксимации $p_e$ используют метод $p_{eql}$.
+Группы методов будем рассматривать в том же порядке,
+каком они рассматривались для методов, использующих $p_{eFq}$.
+
+Результаты для группы методов ``ql3rlovnAAW'',
+с единичным множителем в определении $f_e$
+приведены на рис.~\ref{atu:f:ql3rlovnAAW_sign}.
 
 \begin{figure}[htb!]
   \centerline{
@@ -3474,7 +3534,22 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
   \label{atu:f:ql3rlovnAAW_sign}
 \end{figure}
 
-приведена на рис.~\ref{atu:f:ql3rlFvnAAW_sign}.
+Время установления новой конфигурации агентов в этом случае немного больше, порядка
+$2 t_{ua}$. Поведение методов, использующих величину $p_c$ агентов,
+аналогично --- быстрый скачок в область $p_o$, затем --- медленное
+уменьшение ошибки идентификации по мере образования новой конфигурации агентов,
+и смещения хотя бы одного к величине $p_o$.
+Динамика методов, использующих аппроксимирующие возможности агентов,
+то есть величину $p_e$, заметно отличается --- после начального скачка
+нет зоны стабилизации. Это, в первую очередь, объясняется лучшими аппроксимирующими,
+в том числе экстраполирующими свойствами агентов, использующих метод $p_{eql}$.
+В реальных задачах, проявляющих больше нелинейных свойств, это будет не так заметно,
+но общая тенденция останется.
+
+Как уже было отмечено, использование в определении $f_e$
+значения функции качества $F$ (группа методов ``ql3rlFvnAAW''),
+не позволяет ``дальним'' агентам смещаться слишком сильно
+(рис.~\ref{atu:f:ql3rlFvnAAW_sign}).
 
 \begin{figure}[htb!]
   \centerline{
@@ -3486,7 +3561,22 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
   \label{atu:f:ql3rlFvnAAW_sign}
 \end{figure}
 
-приведена на рис.~\ref{atu:f:ql3rlSvnAAW_sign}.
+Такое отличие приводит к тому, что все рассматриваемые методы
+очень быстро (по сравнению с $t_{ua}$) стабилизируются
+в окрестности своего конечного значения. Отличие проявляется лишь в том,
+какое это значение. Методы, использующие значения $p_c$ агента,
+характеризуются несколько большими ошибками ошибками идентификации,
+чем в предыдущей группе экспериментов, особенно $p_{gc}$ и $p_{bc}$.
+Это объясняется заметным учетом данных с ``дальних'' агентов,
+которые для этой группы методов расположены дальше от $p_o$.
+С другой стороны, методы, использующие $p_e$ агентов,
+характеризуются практически одинаковой низкой ошибкой идентификации.
+
+
+Применение величины $S$ при формировании $f_e$ для методов,
+использующих $p_{eql}$ (группа методов ``ql3rlSvnAAW'') не приводит к
+некорректному распределению агентов
+(рис.~\ref{atu:f:ql3rlSvnAAW_sign}).
 
 
 \begin{figure}[htb!]
@@ -3499,7 +3589,15 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
   \label{atu:f:ql3rlSvnAAW_sign}
 \end{figure}
 
-приведена на рис.~\ref{atu:f:ql3rlWvnAAW_sign}.
+Наблюдаются незначительные отличия от динамики группы методов ``ql3rlFvnAAW''.
+Динамика самих агентов проявляет большую нелинейность,
+``глобальные'' методы демонстрируют несколько лучшие результаты,
+лучшие методы --- практически такие же.
+
+И наконец, использование величины $W$ как множителя в $f_e$
+(группа методов ``ql3rlWvnAAW''), приводит к в какой-то мере
+промежуточной динамике
+(рис.~\ref{atu:f:ql3rlWvnAAW_sign}).
 
 \begin{figure}[htb!]
   \centerline{
@@ -3511,6 +3609,19 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
   \label{atu:f:ql3rlWvnAAW_sign}
 \end{figure}
 
+Для рассматриваемой тестовой задачи принципиальных различий
+между группами методов
+``ql3rlFvnAAW'', ``ql3rlSvnAAW'' и ``ql3rlWvnAAW''
+не наблюдается. Для реальных задач идентификации
+различия могут быть существеннее.
+В первую очередь, различные виды нелинейности
+по-разному аппроксимируются используемыми поисковыми агентами.
+Во-вторых, пренебрежение динамическими характеристиками
+как объекта, так и критерия идентификации, принятое
+в тестовой задаче, при идентификации систем со сложной нелинейной динамикой,
+а там более --- хаотических систем, не является оправданным.
+
+
 
 
 
@@ -3518,25 +3629,25 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
 
 % }}}1
 
-\section{Разновсякое --- переместить}  % {{{1
-
-
-
-\paragraph{TODO3}.
-
-Определить масштабы времени, параметра, критерия на основании точности измерений,
-динамики объекта и системы.
-
-Глобальные и локальные параметры поиска.
-
-Корректно определить динамические параметры агента: $v_f$, $k_e$ \ldots
-с учётом различных тактик.
-
-Равновесные конфигурации поисковых агентов.
-
-Сложность и неоднородность $q(p)$
-
-Определить устойчивость как одного агента, так и системы идентификации в целом.
+% \section{Разновсякое --- переместить}  % {{{1
+%
+%
+%
+% \paragraph{TODO3}.
+%
+% Определить масштабы времени, параметра, критерия на основании точности измерений,
+% динамики объекта и системы.
+%
+% Глобальные и локальные параметры поиска.
+%
+% Корректно определить динамические параметры агента: $v_f$, $k_e$ \ldots
+% с учётом различных тактик.
+%
+% Равновесные конфигурации поисковых агентов.
+%
+% Сложность и неоднородность $q(p)$
+%
+% Определить устойчивость как одного агента, так и системы идентификации в целом.
 
 
 
