Fix error definitions in p3.

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -2761,9 +2761,9 @@ $R_{\infty}^n$ для дискретного представления:
 множества моделей, можно воспользоваться несколькими приёмами.
 Первый --- пусть все агенты неподвижны, а в качестве $p_\mathrm{id}(t)$
 используется $p_c$ той модели, функция качества для которой
-максимальна. Обозначим полученное таким образом значение
-параметра как $p_{bm}(t)$ (``best model''),
-соответствующую ему усреднённую ошибку как $\overline{e}_{bm}$.
+максимальна. В терминах применяемой теминологии полученное таким образом значение
+параметра обозначается $p_{bc}(t)$ (``best central point''),
+соответствующую ему усреднённую ошибку как $\overline{e}_{bc}$.
 При этом безразмерные величины обозначим как
 $\overline{e}_{gebm}$, $\overline{e}_{lebm}$,  \ldots.
 Близость этих величин к единице, при одновременной малости
@@ -2778,9 +2778,9 @@ $\overline{e}_{r*}$, свидетельствует о том, что перед
 Аналогичный способ, но с учётом возможностей агентов
 к аппроксимации --- $p_\mathrm{id}(t)$ определятся
 как $p_e(t)$ для лучшего агента.
-Соответствующую величину для обезразмеривания обозначим как
-$\overline{e}_{ba}$ (``best approximation'').
-Отношение $\overline{e}_{bm} / \overline{e}_{ba}$
+Соответствующая величина для обезразмеривания обозначается
+$\overline{e}_{be}$.
+Отношение $\overline{e}_{bc} / \overline{e}_{be}$
 характеризует аппроксимирующую способность агентов.
 
 % TODO: start section: test
@@ -2793,8 +2793,6 @@ $\overline{e}_{ba}$ (``best approximation'').
 \section{Исследование работоспособности и свойств методов на тестовых задачах}  % {{{1
 
 \subsection{Постановка тестовых задач}
-
-\Cmt{ q dem, ramp }
 
 Для оценивания возможностей системы идентификации
 отслеживать как гладкие, так и скачкообразное изменения параметров,
@@ -2868,7 +2866,7 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
 сказываться на динамических характеристиках метода.
 
 На рис.~\ref{atu:f:qls_ramp_Fq3rlovnAAF} приведены результаты моделирования
-при использовании метода Fq3rlovnAAF.
+при использовании группы методов ``Fq3rlovnAAF''.
 Следует отметить, что практически во всём диапазоне
 объект ``сопровождается'' двумя агентами, и только в области
 ``передачи'' следующие группе это число возрастает до трёх.
