Combine p2 and p3 chapters

--- a/atudiss.tex
+++ b/atudiss.tex
@@ -61,7 +61,7 @@
 
 \subimport{p1/}{p1.tex} % p1/p1.tex  % обзор
 
-\subimport{p2/}{p2.tex} % p2/p2.tex  % критерии
+% \subimport{p2/}{p2.tex} % p2/p2.tex  % критерии - now part of p3
 
 \subimport{p3/}{p3.tex} % p3/p3.tex  % методы
 
